Fix search cancel button visibility on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -23,7 +23,7 @@
     color: black;
 }
 
-.sr-only{
+.sr-only {
     width: 1px;
     height: 1px;
     position: absolute;
@@ -160,9 +160,11 @@ header a:hover {
 }
 
 #search {
+    font-family: 'Raleway', sans-serif;
+    font-size: 16px;
     border: 1px solid var(--main-bg-color);
     outline: none;
-    padding: 15px;
+    padding: 0 70px 0 10px;
     flex: 1;
 }
 
@@ -402,12 +404,16 @@ header a:hover {
 }
 
 .activity-cards {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
+    display: flex;
     gap: 30px;
 }
 
+.activity-cards a {
+    flex: 1;
+}
+
 .activity-cards .card {
+    flex: 1;
     padding: 0;
     height: 100%;
     overflow: hidden;
@@ -451,7 +457,7 @@ footer {
 /****** Media queries ***********/
 /* Medium devices (tablets, less/equal than 1024px) */
 @media (max-width: 1024px) {
-    .filter-container{
+    .filter-container {
         flex-direction: column;
         align-items: start;
     }
@@ -547,7 +553,7 @@ footer {
     }
 
     .search-mobile-btn {
-        
+
         display: flex;
         justify-content: center;
         align-items: center;
@@ -616,7 +622,7 @@ footer {
 
 
     .activity-cards {
-        grid-template-columns: 1fr;
+        flex-direction: column;
         gap: 15px;
     }
 
